--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -22,6 +22,7 @@ jobs:
         node-version: 18
 
     - name: Install dependencies
+      working-directory: ./frontend
       run: npm ci
 
     - name: Build project
