--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: 18
 
     - name: Install dependencies
-      working-directory: ./frontend
+      working-directory: ./book-app
       run: npm ci
 
     - name: Build project
